Fix text alignment in About section for mobile

--- a/src/scss/sections/_about.scss
+++ b/src/scss/sections/_about.scss
@@ -49,7 +49,8 @@
         line-height: 1.6rem;
         font-weight: 500;
         font-family: var(--raleway);
-        text-align: justify;
+        text-align: left;
+        
       }
 
       &-list {
